2006-01-04  Paolo Bonzini  <bonzini@gnu.org>

	Sync from gcc:

	2006-01-04  Paolo Bonzini  <bonzini@gnu.org>

        PR bootstrap/24252

        * Makefile.def (flags_to_pass): Add STAGE1_CFLAGS and STAGE1_LANGUAGES.
        * Makefile.tpl (OBJDUMP): New.
        (EXTRA_HOST_FLAGS): Add it.
        (EXTRA_GCC_FLAGS): Remove flags already specified in flags_to_pass.

        * Makefile.tpl (stage[+id+]-start, stage[+id+]-end): Do not try
        to use symbolic links between directories.  Avoid race conditions
        or make them harmless.
        * configure.in: Do not try to use symbolic links between directories.

        * Makefile.def (LEAN): Pass.
        * Makefile.tpl (LEAN): Define.
        (stage[+id+]-start): Accept that the previous directory does not
        exist, if the bootstrap is lean.
        (stage[+id+]-bubble): Invoke lean bootstrap commands after
        stage[+id+]-start.  Use a makefile variable and an `if' instead of a
        configure substitution.
        ([+compare-target+]): Likewise.
        ([+bootstrap-target+]-lean): New.
        * configure.in: Remove lean bootstrap support from here.

        * Makefile.in: Regenerate.
        * configure: Regenerate.

	2006-01-02  Andreas Schwab  <schwab@suse.de>

        * configure.in: When reconfiguring remove Makefile in
        all stage directories.
        * configure: Regenerate.

2005-12-27  Leif Ekblad  <leif@rdos.net>

	* configure.in: Add support for RDOS target.
	* configure: Regenerate.

2005-12-27  Nick Clifton  <nickc@redhat.com>

	PR binutils/1990
	* libtool.m4: Synchronize with version in GCC sources.

2005-12-20  Paolo Bonzini  <bonzini@gnu.org>

        Revert Ada-related part of the previous change.

        * Makefile.def (ADAFLAGS, BOOT_ADAFLAGS, ADAFLAGS_FOR_TARGET):
        Do not pass.
        * Makefile.tpl (BOOT_ADAFLAGS): Do not define.
        * Makefile.in: Regenerate.
        * configure.in: Do not include mt-ppc-aix target fragment.